backend overall improvements

--- a/server/view/chat.html
+++ b/server/view/chat.html
@@ -27,7 +27,8 @@
             <option value="Doctors">Doctors</option>
           </select>
         </form>
-        <a id="leave-btn" class="btn">LEAVE CHAT</a>
+          <a id="leave-btn" class="btn">LEAVE CHAT</a>
+          <a id="dashboard-btn" class="btn">GO TO ADMIN DASHBOARD</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
