--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -38,7 +38,7 @@ a {
 
 .chat-container {
 	max-width: 1100px;
-	background: #fff;
+	background: var(--light-color);
 	margin: 30px auto;
 	overflow: hidden;
 }
@@ -82,6 +82,7 @@ a {
 }
 
 .chat-messages-container {
+	background: #fff;
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
