--- a/server/view/index.html
+++ b/server/view/index.html
@@ -43,7 +43,16 @@
 					</div>
 					<button type="submit" class="btn">JOIN CHAT</button>
 				</form>
+				<button class="btn" id= "dashboardButton" onclick="goToDashboard()">GO TO ADMIN DASHBOARD</button>
 			</main>
 		</div>
+		<script>
+			// React App Host
+			const REACT_APP_HOST = 'http://localhost:3000';
+			
+			const goToDashboard = () => {
+				location.href = REACT_APP_HOST;
+			}
+		</script>
 	</body>
 </html>
