--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -165,6 +165,14 @@ a {
 	justify-content: center;
 }
 
+.logout-button-container {
+	width: 90vw;
+	margin: auto auto 1vh auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: right;
+}
+
 .dashboard-navigation button {
 	cursor: pointer;
 	display: block;
