--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -17,7 +17,7 @@ a {
 
 /* Chat Page */
 .chat-container {
-	max-width: 1100px;
+	max-width: 90vw;
 	background: var(--light-color);
 	margin: 30px auto;
 	overflow: hidden;
@@ -35,11 +35,13 @@ a {
 }
 
 .chat-main {
+	height: 75vh;
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 }
 
 .chat-sidebar {
+	height: 100%;
 	background: var(--dark-color-b);
 	color: #fff;
 	padding: 20px 20px 60px;
@@ -62,9 +64,9 @@ a {
 }
 
 .chat-messages-container {
+	height: 100%;
 	background: #fff;
 	padding: 30px;
-	max-height: 500px;
 	overflow-y: scroll;
 }
 
